--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
           <div id="welcome-page" class="card text-center welcome_page">
             <div class="card-header">
               <h2>ReflexGame - Vanilla JS</h2>
+              <div class="timer">60</div>
             </div>
             <div class="card-body">
               <div class="mb-4 d-flex justify-content-center">
@@ -26,7 +27,7 @@
               <div>
                 <p class="mb-4 fs-5">Choose difficulty level...</p>
                 <div class="btn-group-vertical" role="group" aria-label="Basic radio toggle button group">
-                  <input type="radio" class="btn-check" data-id="gameplay-level" name="btnradio" id="easy-level" autocomplete="off">
+                  <input type="radio" class="btn-check" data-id="gameplay-level" name="btnradio" id="easy-level" autocomplete="off" checked>
                   <label class="btn btn-outline-primary" for="easy-level">Easy (4x4)</label>
                 
                   <input type="radio" class="btn-check" data-id="gameplay-level" name="btnradio" id="medium-level" autocomplete="off">
@@ -45,9 +46,7 @@
           <div id="dashboard-page" class="card">
             <h1>Dashboard game page</h1>
             <div class="card-body">
-              <div class="game__board">
-                <div class="game__board-card bg-light"></div>
-              </div>
+              <div class="game__board"></div>
             </div>
             <div class="card-footer">
               <button type="button" id="end-game-button" class="btn btn-primary">End Game</button>
