enable play again the same round

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
                   <p>Points <span id="badge-points" class="badge bg-danger">0</span></p>
                 </div>
                 <div class="dashboard-box border-end">
-                  <p>Lives <span id="badge-lives" class="badge bg-success">0</span></p>
+                  <p>Lives <span id="badge-lives" class="badge bg-success">3</span></p>
                 </div>
                 <div class="dashboard-box border-end">
                   <p>Time <span id="badge-time" class="badge bg-info">60 sec.</span></p>
@@ -58,12 +58,14 @@
                   <p>Player <span id="badge-name" class="badge bg-dark">Name</span></p>
                 </div>
               </div>
+              <div class="dashboard-message border-top"></div>
             </div>
             <div class="card-body">
               <div class="game__board"></div>
             </div>
             <div class="card-footer">
               <button type="button" id="end-game-button" class="btn btn-primary">End Game</button>
+              <button type="button" id="try-again" class="btn btn-danger disabled">Play Again</button>
             </div>
           </div>
         </div>
