Fix small gameplay bugs

--- a/src/index.html
+++ b/src/index.html
@@ -64,8 +64,8 @@
               <div class="game__board"></div>
             </div>
             <div class="card-footer">
-              <button type="button" id="end-game-button" class="btn btn-primary">End Game</button>
-              <button type="button" id="try-again" class="btn btn-danger disabled">Play Again</button>
+              <button type="button" id="end-game-button" class="btn btn-primary ms-2 me-2">End Game</button>
+              <button type="button" id="try-again" class="btn btn-danger disabled ms-2 me-2">Play Again</button>
             </div>
           </div>
         </div>
